--- a/manifest.json
+++ b/manifest.json
@@ -8,9 +8,9 @@
       "type": "image/x-icon"
     },
     {
-      "src": "favicon.ico",
+      "src": "iconApp.png",
       "sizes": "192x192",
-      "type": "image/x-icon"
+      "type": "image/png"
     },{
       "src": "favicon.ico",
       "sizes": "96x96",
