--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "gh-pages": "^2.0.1",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-qr-reader": "^2.1.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.5"
   },
   "scripts": {
