--- a/manifest.json
+++ b/manifest.json
@@ -12,9 +12,9 @@
       "sizes": "192x192",
       "type": "image/png"
     },{
-      "src": "favicon.ico",
-      "sizes": "96x96",
-      "type": "image/x-icon"
+      "src": "playstore-icon.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
