--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,8 @@
     }
   ],
   "start_url": ".",
-  "display": "standalone",
+  "display": "fullscreen",
+  "orientation": "portrait",
   "theme_color": "#FFF",
   "background_color": "#333"
 }
