--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     }
   ],
   "start_url": ".",
-  "display": "fullscreen",
+  "display": "standalone",
   "orientation": "any",
   "theme_color": "#FFF",
   "background_color": "#333"
